<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:baselineAligned="true"
        android:padding="32dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_trophy"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="49dp"
        android:layout_height="44dp"
        android:layout_gravity="center" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_32x">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_32x"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword|textWebPassword"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_32x"
        android:paddingBottom="@dimen/dimen_16x"
        android:text="@string/fpwd"
        android:textColor="@color/dark_grey"
        android:textColorHighlight="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_32x"
        android:layout_marginTop="@dimen/dimen_16x"
        android:layout_marginRight="@dimen/dimen_32x"
        android:text="@string/login"
        android:background="@color/design_default_color_primary_dark"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:textColor="@color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signupbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_16x"
        android:text="@string/signup" />

</LinearLayout>